# Gaussian-Mixture-Convolution-Networks

./: .gitignore  .gitmodules  LICENSE  README.md  howto_conda
cluster/: my_info  (+1 more)
cpp_modules/gm_evaluate/: CMakeLists.txt  common.h  gm_evaluate_inversed.py  gm_evaluate_inversed_cpu.cpp  gm_evaluate_inversed_cuda.cpp  gm_evaluate_inversed_cuda.cu  jit.py
src/gmc/cpp/extensions/: CMakeLists.txt  CpuSynchronisationPoint.cpp  CpuSynchronisationPoint.h  ParallelStack.h  algorithms.h  common.h  compile_flags.py  containers.h  cuda_operations.h  cuda_qt_creator_definitinos.h  hacked_accessor.h  mixture.h  parallel_start.h  unit_tests.cpp
src/gmc/cpp/extensions/benchmarks/: bvh_mhem_fit.cpp  convolution_fitting.cpp  evaluate_inversed.cpp  main.cpp
src/gmc/cpp/extensions/bvh_mhem_fit/: BvhMhemFitConfig.h  Config.h  algorithms.h  binding.py  bindings.cpp  bindings.h  bvh_fit_tester.cpp  generate_implementation_template_instances.sh  implementation.cpp  implementation.cu  implementation.h  implementation_autodiff_backward.cpp  implementation_autodiff_backward.h  implementation_backward.cu  implementation_backward.h  implementation_common.cuh  implementation_common.h  implementation_dispatch.cpp  implementation_forward.cpp  implementation_forward.cu  implementation_forward.h  implementation_forward_template.h  implementation_forward_template_16.cu  implementation_forward_template_2.cu  implementation_forward_template_4.cu  implementation_forward_template_8.cu  implementation_template_externs.h  test_bvh_fit.cpp  test_runner.cpp  unit_test_support.h  unittest_algorithms_grad.cpp  unittest_bvh_fit_backward.cpp  unittest_mixture_grad.cpp  unittest_vs_alpha.cpp
src/gmc/cpp/extensions/bvh_mhem_fit/implementation_backward_instances/: template_instance_implementation_backward_16_double_2.cu  template_instance_implementation_backward_16_double_3.cu  template_instance_implementation_backward_16_float_2.cu  template_instance_implementation_backward_16_float_3.cpp  template_instance_implementation_backward_16_float_3.cu  template_instance_implementation_backward_2_double_2.cpp  template_instance_implementation_backward_2_double_2.cu  template_instance_implementation_backward_2_double_3.cu  template_instance_implementation_backward_2_float_2.cu  (+10 more)
src/gmc/cpp/extensions/bvh_mhem_fit_alpha/: Config.h  generate_implementation_template_instances.sh  implementation.h  implementation_autodiff_backward.cpp  implementation_autodiff_backward.h  implementation_backward.h  implementation_common.h  implementation_dispatch.cpp  implementation_forward.h  implementation_template_externs.h  test_bvh_fit.cpp  unittest_algorithms_grad.cpp  unittest_all.cpp
src/gmc/cpp/extensions/convolution/: Config.h  binding.py  bindings.cpp  bindings.h  generate_implementation_template_instances.sh  implementation.h  implementation_backward.h  implementation_common.h  implementation_dispatch.cpp  implementation_forward.h  implementation_template_externs.h
src/gmc/cpp/extensions/convolution_fitting/: Config.h  Tree.cu  Tree.h  binding.py  bindings.cpp  bindings.h  building.h  generate_implementation_template_instances.sh  implementation.h  implementation_backward.h  implementation_common.h  implementation_dispatch.cpp  implementation_forward.h  implementation_template_externs.h  morton_code.h  test.cpp
src/gmc/cpp/extensions/em_fitting/: em_fitting.py  em_fitting_common.h  em_fitting_cpu.cpp  em_fitting_cuda.cpp
src/gmc/cpp/extensions/evaluate/: evaluate_inversed.py  evaluate_inversed_cpu.cpp  evaluate_inversed_cuda.cpp  evaluate_inversed_cuda.cu
src/gmc/cpp/extensions/evaluate2/: evaluate2_inversed_cpu.cpp  evaluate2_inversed_cuda.cpp  test_runner.cpp
src/gmc/cpp/extensions/evaluate_inversed/: cpu_bvh.cpp  cpu_parallel.cpp  cuda_bvh.cpp  cuda_bvh.cu  cuda_bvh_implementation.cu  cuda_parallel.cpp  cuda_parallel.cu  evaluate_inversed.cpp  evaluate_inversed.h  evaluate_inversed.py  evaluate_inversed_bindings.cpp  implementations.h  parallel_binding.cpp  parallel_binding.h  parallel_implementation.cu  parallel_implementation.h  parallel_implementation_optimised_backward.cu  parallel_implementation_optimised_forward.cu  test_evaluate_inversed.cpp  test_runner.cpp
src/gmc/cpp/extensions/furthest_point_sampling/: LICENSE  furthest_point_sampling.cpp  furthest_point_sampling.cu  furthest_point_sampling.py
src/gmc/cpp/extensions/integrate/: binding.cpp  binding.h  binding.py  implementation.cu  implementation.h
src/gmc/cpp/extensions/integrate_inversed/: integrate_inversed.py  parallel_binding.cpp  parallel_binding.h  parallel_implementation.cu  parallel_implementation.h
src/gmc/cpp/extensions/lbvh/: Config.h  LICENSE_and_COPYRIGHT  aabb.h  building.h  bvh.cu  bvh.h  morton_code.h  predicator.h  query.h  utility.h
src/gmc/cpp/extensions/math/: gpe_glm.h  matrix.h  matrix_inverse.py  matrix_inverse_cuda.cpp  matrix_inverse_cuda.cu  scalar.h  symeig.h  symeig.py  symeig_cpu.cpp  symeig_cpu.h  symeig_cuda.cpp  symeig_cuda.cu  symeig_cuda.h  symeig_detail.h  test_symeig.py
src/gmc/cpp/extensions/pieces/: bindings.cpp  bindings.h  bindings.py  integrate.cu  integrate.h  matrix_inverse.cu  matrix_inverse.h  pieces.cpp  pieces.h  pieces_bindings.cpp  symeig.cu  symeig.h
src/gmc/cpp/extensions/unittests/: algorithms.cpp  alpha_vs_ad.cpp  bvh_mhem_fit_alpha_vs_ad.cpp  bvh_mhem_fit_working_vs_alpha.cpp  bvh_mhem_fit_working_vs_binding.cpp  convolution_fitting.cpp  evaluate_inversed.cpp  grad_algorithms.cpp  grad_evaluate_inversed.cpp  grad_mixture.cpp  grad_welford.cpp  main.cpp  support.h  util_helpers.cpp  welford.cpp  working_vs_alpha.cpp
src/gmc/cpp/extensions/util/: algorithms.h  algorithms_grad.h  autodiff.h  containers.h  cuda.h  epsilon.h  gaussian.h  gaussian_mixture.h  glm.h  helper.h  mixture.h  output.h  scalar.h  welford.h
src/gmc/cpp/gm_evaluate/: CMakeLists.txt  gm_evaluate_inversed.py  gm_evaluate_inversed_cpu.cpp
src/pcfitting/cpp/gmeval/: CMakeLists.txt  pyeval.cpp  pyeval.py  sampler.hpp
src/pcfitting/cpp/gmeval/gmslib/: base.hpp  gaussian.hpp  geom.hpp  pointindex.hpp  random.hpp  vec.hpp
(+412 files in other folders)
